# csc2026

data/: README.md
exercises/TT-E1-debugging-sanitizers/starter/: CMakeLists.txt
exercises/TT-E2-docs-and-ci/ci-parallel-root/plots/: histogram_data_A.GamGam.root  merged_histograms_data.root
